[package]
name = "mykisah"
version = "0.1.0"
edition = "2021"

[dependencies]
whatsapp-rust = "0.2"
whatsapp-rust-tokio-transport = "0.2"
whatsapp-rust-ureq-http-client = "0.2"
wacore = "0.2"
tokio = { version = "1", features = ["full"] }
qrcode = "0.14"
waproto = "0.2"
anyhow = "1.0"
crossterm = "0.27"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
console-subscriber = "0.1.8"
once_cell = "1.18"

